#11 Refactored a bit, and made it possible for a Customer to make a comment on a order.
