# services/customerService/handlers/customer_handler.go
@@ -6,7 +6,6 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/jackc/pgx/v5/pgtype"
 	"github.com/rasm445f/soft-exam-2/broker"
 	"github.com/rasm445f/soft-exam-2/db/generated"
 	"github.com/rasm445f/soft-exam-2/domain"
@@ -220,12 +219,13 @@ func (h *CustomerHandler) UpdateCustomer() http.HandlerFunc {
 // }
 
 type MenuItemSelection struct {
-	CustomerID   int32 `json:"customerId"`
-	RestaurantId int32 `json:"restaurantId"`
-	Name   string `json:"name"`
-	Price  pgtype.Numeric `json:"price"`
-	Quantity     int   `json:"quantity"`
+	CustomerID   int32 `json:"customerId" example:"1"`
+	RestaurantId int32 `json:"restaurantId" example:"10"`
+	Name   string `json:"name" example:"Cheese Burger"`
+	Price  float64 `json:"price" example:"9.99"`
+	Quantity     int   `json:"quantity" example:"2"`
 }
+
 
 // SelectMenuItem godoc
 // @Summary Select Menuitem
@@ -233,8 +233,8 @@ type MenuItemSelection struct {
 // @Tags customers
 // @Accept  application/json
 // @Produce application/json
-// @Param customer body MenuItemSelection true "Customer object"
-// @Success 201 {object} generated.Customer
+// @Param customer body MenuItemSelection true "Menu item selection details"
+// @Success 201 {object} MenuItemSelection "Menu item successfully selected"
 // @Failure 400 {string} string "Bad request"
 // @Failure 500 {string} string "Internal server error"
 // @Router /api/customer/menu/select [post]
