# services/shoppingCartService/handlers/shopping_handler.go
@@ -3,7 +3,6 @@ package handlers
 import (
 	"context"
 	"encoding/json"
-	"fmt"
 	"log"
 	"net/http"
 	"strconv"
@@ -195,7 +194,7 @@ func (h *ShoppingCartHandler) ConsumeMenuItem() http.HandlerFunc {
 				log.Printf("Failed to marshal event payload: %v", err)
 				return
 			}
-			fmt.Println(payloadBytes)
+			// fmt.Println(payloadBytes)
 
 			// Unmarshal JSON bytes into IntermediatePayload
 			var intermediate IntermediatePayload
@@ -203,7 +202,7 @@ func (h *ShoppingCartHandler) ConsumeMenuItem() http.HandlerFunc {
 				log.Printf("Failed to unmarshal payload into IntermediatePayload: %v", err)
 				return
 			}
-			fmt.Printf("Unmarshaled intermediate: %v", intermediate)
+			// fmt.Printf("Unmarshaled intermediate: %v", intermediate)
 
 			// Map IntermediatePayload to AddItemParams
 			item := db.AddItemParams{
@@ -228,32 +227,49 @@ func (h *ShoppingCartHandler) ConsumeMenuItem() http.HandlerFunc {
 	}
 }
 
-// ClearCart godoc
+type SelectOrderRequest struct {
+	Comment string `json:"comment" example:"No vegetables on the pizza."`
+}
+
+// SelectOrder godoc
 //
-//	@Summary		Publish the shopping cart to rabbimq to be consumed by the Order service
-//	@Description	Clears the cart for the specified customer
+//	@Summary		Publish a Customer's shopping cart to RabbitMQ to be consumed by the Order service with an optional Comment
+//	@Description	Selecting the cart for the specified customer with an optional comment
 //	@Tags			shoppingCart
 //	@Accept			application/json
 //	@Produce		application/json
-//	@Param			customerId	path		int		true	"customer ID"
-//	@Success		200			{string}	string	"cart cleared"
+//	@Param			customerId	path		int		true	"Customer ID"
+//	@Param			comment		body		SelectOrderRequest		true	"Customer Comment (optional)"
+//	@Success		200			{string}	string	"Order Selected Successfully"
 //	@Failure		400			{string}	string	"Bad request"
 //	@Failure		500			{string}	string	"Internal server error"
-//	@Router			/api/shopping/publish/{customerId} [get]
+//	@Router			/api/shopping/publish/{customerId} [post]
 func (h *ShoppingCartHandler) SelectOrder() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		ctx := r.Context()
+
 		customerIdStr := r.PathValue("customerId")
 		customerId, err := strconv.Atoi(customerIdStr)
 		if err != nil {
-			http.Error(w, "Malformed customer_id", http.StatusBadRequest)
+			http.Error(w, "Invalid customer_id", http.StatusBadRequest)
 		}
-		shoppingCart, err := h.domain.ViewCart(ctx, customerId)
-		if err != nil {
-			log.Printf("Failed to publish event: %v", err)
-			http.Error(w, "Failed to select menu item", http.StatusInternalServerError)
+
+		// Decode the Comment from the request body
+		var requestPayload SelectOrderRequest
+		if err := json.NewDecoder(r.Body).Decode(&requestPayload); err != nil {
+			http.Error(w, "Invalid request body", http.StatusBadRequest)
 			return
 		}
+
+		// Fetch the shopping cart
+		shoppingCart, err := h.domain.ViewCart(ctx, customerId)
+		if err != nil {
+			http.Error(w, "Failed to fetch shopping cart", http.StatusInternalServerError)
+			return
+		}
+
+		// Add the Comment to the shopping cart payload
+		shoppingCart.Comment = requestPayload.Comment
 
 		// Publish event to RabbitMQ
 		event := broker.Event{
@@ -263,13 +279,15 @@ func (h *ShoppingCartHandler) SelectOrder() http.HandlerFunc {
 		err = broker.Publish("order_created_queue", event)
 		if err != nil {
 			log.Printf("Failed to publish event: %v", err)
-			http.Error(w, "Failed to select menu item", http.StatusInternalServerError)
+			http.Error(w, "Failed to select order", http.StatusInternalServerError)
 			return
 		}
 		// TODO: should the shoppingcart be cleared afterwards? or maybe when the order is confirmed?
 		// h.domain.ClearCart(ctx, customerId)
 
 		w.WriteHeader(http.StatusOK)
-		w.Write([]byte(`{"message": "Menu item selected successfully}`))
+		w.Write([]byte(`{"message": "Order published and selected successfully}`))
 	}
 }
+
+
